Fixed card text alignment

--- a/frontend/src/static/scss/_mixins.scss
+++ b/frontend/src/static/scss/_mixins.scss
@@ -17,7 +17,7 @@
   color: white;
   cursor: pointer;
   border: none;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: bold;
   outline: none;
   border-radius: $border-radius;
